Added Google Auth Login

--- a/ecommerce/src/components/Header/styles.scss
+++ b/ecommerce/src/components/Header/styles.scss
@@ -34,6 +34,12 @@ height: 100%;
 
     li {
         list-style-type: none;
+        display: inline-block;
+        margin-right: 1.0rem;
+
+        &:last-child {
+            margin-right: 0;
+        }
        
         a {
             font-size: 1.8rem;
